syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

import "google/protobuf/wrappers.proto";

import "common.proto";
import "runtime.package.proto";


message Drawable {
    enum ObjectType {
        UNKNOWN_OBJECT_TYPE = 0;
        VERTICAL_LINE = 1;
        HORIZONTAL_LINE = 2;
        TREND_LINE = 3;
        RECTANGLE = 4;
        TRIANGLE = 5;
        ELLIPSE = 6;
        SYMBOL = 7;
        TEXT = 8;
        BITMAP = 9;

        LABEL_CONTROL = 100;
        RECTANGLE_CONTROL = 101;
        EDIT_CONTROL = 102;
        BUTTON_CONTROL = 103;
        BITMAP_CONTROL = 104;
    }

    enum SymbolAnchor {
        UNKNOWN_ANCHOR_TYPE = 0;
        TOP = 1;
        BOTTOM = 2;
    }

    enum ControlAnchor {
        UNKNOWN_CONTROL_ANCHOR = 0;
        UPPER_LEFT = 1;
        UPPER_RIGHT = 2;
        LOWER_LEFT = 3;
        LOWER_RIGHT = 4;
    }
}

message DrawableObjectInfo {
    google.protobuf.StringValue name = 1;
    Drawable.ObjectType type = 2;
    sfixed64 created_time_raw = 3;
    google.protobuf.StringValue output_id = 4;

    bool is_background = 10;
    bool is_hidden = 11;
    bool is_selectable = 12;
    int64 z_index = 13;
    google.protobuf.StringValue tooltip = 14;

    DrawableLinePropsInfo line_props = 100;
    DrawableShapePropsInfo shape_props = 101;
    DrawableSymbolPropsInfo symbol_props = 102;
    DrawableTextPropsInfo text_props = 103;
    DrawableControlPropsInfo control_props = 104;
    DrawableBitmapPropsInfo bitmap_props = 105;

    DrawableObjectAnchorsList anchors = 200;
    DrawableObjectLevelsList levels = 201;
}

message DrawableLinePropsInfo {
    google.protobuf.UInt32Value color_argb = 1;
    int32 thickness = 2;
    Metadata.LineStyle style = 3;
    bool ray_left = 4;
    bool ray_right = 5;
    bool ray_vertical = 6;
}

message DrawableShapePropsInfo {
    google.protobuf.UInt32Value border_color_argb = 1;
    int32 border_thickness = 2;
    Metadata.LineStyle border_style = 3;
    bool fill = 4;
    google.protobuf.UInt32Value fill_color_argb = 5;
}

message DrawableSymbolPropsInfo {
    uint32 code = 1;
    int32 size = 2;
    google.protobuf.UInt32Value color_argb = 3;
    google.protobuf.StringValue font_family = 4;
    Drawable.SymbolAnchor anchor = 5;
}

message DrawableTextPropsInfo {
    google.protobuf.StringValue content = 1;
    google.protobuf.UInt32Value color_argb = 2;
    google.protobuf.StringValue font_family = 3;
    int32 font_size = 4;
    double angle = 5;
}

message DrawableAnchorPropsInfo {
    sfixed64 time_raw = 1;
    double price = 2;
}

message DrawableObjectAnchorsList {
    repeated DrawableAnchorPropsInfo anchors = 1;
}

message DrawableLevelPropsInfo {
    double value = 1;
    google.protobuf.StringValue text = 2;
    google.protobuf.UInt32Value color_argb = 3;
    google.protobuf.Int32Value line_thickness = 4;
    Metadata.LineStyle line_style = 5;
    google.protobuf.StringValue font_family = 6;
    google.protobuf.Int32Value font_size = 7;
}

message DrawableObjectLevelsList {
    repeated DrawableLevelPropsInfo levels = 1;

    google.protobuf.UInt32Value default_color_argb = 2;
    int32 default_line_thickness = 3;
    Metadata.LineStyle default_line_style = 4;
    google.protobuf.StringValue default_font_family = 5;
    int32 default_font_size = 6;
}

message DrawableControlPropsInfo {
    int32 x = 1;
    int32 y = 2;
    int32 width = 3;
    int32 height = 4;
    Drawable.ControlAnchor anchor = 5;
}

message DrawableBitmapPropsInfo {
    int32 offset_x = 1;
    int32 offset_y = 2;
    int32 width = 3;
    int32 height = 4;
    google.protobuf.StringValue file_path = 5;
}

message DrawableCollectionUpdate {
    CollectionUpdate.Action action = 1;
    google.protobuf.StringValue obj_name = 2;
    DrawableObjectInfo obj_info = 3;
}
